// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Paragraph unit tests handles formatting dangling punctuation after Links and no extra multiplying on rerenders 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  margin-bottom: 16px;
  color: var(--font-color-primary);
}

.emotion-0 strong,
.emotion-0 b {
  font-weight: 600;
}

<p
    class="emotion-0"
  >
    <a
      class="Link-module_IFszra_link colorScheme-module_uDd7va_auto viaLink"
      data-rac=""
      data-react-aria-pressable="true"
      data-viaid="via-link"
      href="https://cloud.mongodb.com?tck=docs_realm"
      tabindex="0"
      target="_self"
    >
      <span
        class="Link-module_IFszra_text"
      >
        Deploy a Free Tier Cluster.
      </span>
    </a>
  </p>
</DocumentFragment>
`;

exports[`Paragraph unit tests handles formatting dangling punctuation after Links and no extra multiplying on rerenders 2`] = `
<DocumentFragment>
  .emotion-0 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  margin-bottom: 16px;
  color: var(--font-color-primary);
}

.emotion-0 strong,
.emotion-0 b {
  font-weight: 600;
}

<p
    class="emotion-0"
  >
    <a
      class="Link-module_IFszra_link colorScheme-module_uDd7va_auto viaLink"
      data-rac=""
      data-react-aria-pressable="true"
      data-viaid="via-link"
      href="https://cloud.mongodb.com?tck=docs_realm"
      tabindex="0"
      target="_self"
    >
      <span
        class="Link-module_IFszra_text"
      >
        Deploy a Free Tier Cluster.
      </span>
    </a>
  </p>
</DocumentFragment>
`;

exports[`Paragraph unit tests renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  margin-bottom: 16px;
  color: var(--font-color-primary);
}

.emotion-0 strong,
.emotion-0 b {
  font-weight: 600;
}

<p
    class="emotion-0"
  >
    Verify that MongoDB has started successfully by checking the process output for the following line:
  </p>
</DocumentFragment>
`;
